# caxen

./: .gitignore  .gitmodules  AGENTS.md  README.md  readme.md
repo-analysis/: .env.example  LICENSE  README.md  package.json  pyproject.toml
repo-analysis/configs/: benchmarks.yaml  indexer.yaml  retrieval_profiles.json  retriever.yaml
repo-analysis/docs/: Implementation Plan.md  Overview.md  Research 3.md  Research 4.md  Research 5.md  Research.md  Target Architecture.md  To-Do.md  architecture.md  backend-migration-pr-plan.md  evaluation.md  first-milestone-plan.md  retrieval.md  schemas.md  summaries.md
repo-analysis/docs/research/: Index.md  Research 10.md  Research 11.md  Research 12.md  Research 13.md  Research 14.md  Research 15.md  Research 2.md  Research 5.md  Research 6.md  Research 7.md  Research 8.md  Research 9.md  Research Change Log.md  Research Sources.md  Research Summaries.md
repo-analysis/native/src/: main.rs
repo-analysis/scripts/: bootstrap.sh  build_embeddings.sh  build_index.sh  export_summaries.sh  precompute_eval_cache.sh  run_benchmarks.sh  sync_repos.sh
repo-analysis/src/agents/: __init__.py  toolkit.py
repo-analysis/src/backends/: graph_backend.py  metadata_store.py  search_backend.py
repo-analysis/src/cli/: main.py
repo-analysis/src/common/: inventory.py  native_tool.py  query_manifest.py  retrieval_profiles.py  telemetry.py  text.py
repo-analysis/src/embeddings/: indexer.py
repo-analysis/src/evaluation/: harness.py
repo-analysis/src/graph/: __init__.py  builder.py  query.py  store.py
(+35 files in other folders)
