[project]
name = "repo-analysis"
version = "0.1.0"
description = "Parser-first repository analysis toolkit for Carbon and Yellowstone Vixen"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/integration"]

[tool.repo_analysis]
implemented_phase = "bootstrap_inventory_and_rust_symbol_slice"
